syntax = "proto3";
package pbGame;

message StartGameRequest {
  string startName = 1;
}

message StartGameResponse {
  string startCode = 1;
  string startMsg = 2;
}

service GameService {
  rpc StartGame(StartGameRequest) returns (StartGameResponse){}
}